Fixed horizontal global overflow

--- a/src/index.css
+++ b/src/index.css
@@ -4,9 +4,11 @@
 
 html, body{
   scroll-behavior: smooth;
+  
 }
 
 body {
+  padding:0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
